--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pandas>=2.2.0
 python-dateutil>=2.8.2
 python-dotenv>=1.0.0
 psycopg2-binary>=2.9.9
+python-multipart>=0.0.6
 requests>=2.31.0
 apscheduler>=3.10.4
 sentry-sdk>=1.38.0
